Alterei para o usuario e senha padrao do banco

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
-  "username": "duque",
-  "password": "1850",
+  "username": "postgres",
+  "password": "docker",
 
   "name": "default",
   "type": "postgres",
